@@ -7,8 +7,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import com.google.gson.JsonObject;
-
 import de.tum.in.www1.artemis.domain.Feedback;
 import de.tum.in.www1.artemis.domain.Result;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
@@ -20,7 +18,6 @@ import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
 import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.service.compass.controller.FeedbackSelector;
 import de.tum.in.www1.artemis.service.compass.controller.ModelClusterFactory;
-import de.tum.in.www1.artemis.service.compass.statistics.CompassStatistics;
 import de.tum.in.www1.artemis.service.compass.umlmodel.UMLElement;
 import de.tum.in.www1.artemis.service.util.TimeLogUtil;
 
@@ -28,8 +25,6 @@ import de.tum.in.www1.artemis.service.util.TimeLogUtil;
 public class CompassService {
 
     private final Logger log = LoggerFactory.getLogger(CompassService.class);
-
-    private final ModelingExerciseRepository modelingExerciseRepository;
 
     private final ModelingSubmissionRepository modelingSubmissionRepository;
 
@@ -39,9 +34,8 @@ public class CompassService {
 
     private final FeedbackRepository feedbackRepository;
 
-    public CompassService(ModelingExerciseRepository modelingExerciseRepository, ModelingSubmissionRepository modelingSubmissionRepository,
-            ModelElementRepository modelElementRepository, ModelClusterRepository modelClusterRepository, FeedbackRepository feedbackRepository) {
-        this.modelingExerciseRepository = modelingExerciseRepository;
+    public CompassService(ModelingSubmissionRepository modelingSubmissionRepository, ModelElementRepository modelElementRepository, ModelClusterRepository modelClusterRepository,
+            FeedbackRepository feedbackRepository) {
         this.modelingSubmissionRepository = modelingSubmissionRepository;
         this.modelClusterRepository = modelClusterRepository;
         this.modelElementRepository = modelElementRepository;
@@ -72,11 +66,11 @@ public class CompassService {
 
         ModelClusterFactory clusterFactory = new ModelClusterFactory();
         List<ModelCluster> modelClusters = clusterFactory.buildClusters(submissions, modelingExercise);
-        log.info("ModelClusterTimelog: building clusters of {} submissions for modeling exercise {} done in {}", submissions.size(), modelingExercise.getId(),
+        log.info("ModelClusterTimeLog: building clusters of {} submissions for modeling exercise {} done in {}", submissions.size(), modelingExercise.getId(),
                 TimeLogUtil.formatDurationFrom(start));
         modelClusterRepository.saveAll(modelClusters);
         modelElementRepository.saveAll(modelClusters.stream().flatMap(modelCluster -> modelCluster.getModelElements().stream()).collect(Collectors.toList()));
-        log.info("ModelClusterTimelog: building and saving clusters of {} submissions for exercise {} done in {}", submissions.size(), modelingExercise.getId(),
+        log.info("ModelClusterTimeLog: building and saving clusters of {} submissions for exercise {} done in {}", submissions.size(), modelingExercise.getId(),
                 TimeLogUtil.formatDurationFrom(start));
 
     }
@@ -87,7 +81,7 @@ public class CompassService {
      *
      * @param modelingSubmission the submission to select feedbacks for
      * @param modelingExercise the modeling exercise to which the submission belongs
-     * @return the semi automatic result that has the feedbacks inside
+     * @return the semi-automatic result that has the feedbacks inside
      */
     public Result getSuggestionResult(ModelingSubmission modelingSubmission, ModelingExercise modelingExercise) {
         Result result = getAutomaticResultForSubmission(modelingSubmission);
@@ -105,8 +99,7 @@ public class CompassService {
                 if (modelElement != null) {
                     ModelCluster cluster = modelClusters.get(modelClusters.indexOf(modelElement.getCluster()));
                     Set<ModelElement> similarElements = cluster.getModelElements();
-                    List<String> similarReferences = similarElements.stream().map(modelElement1 -> modelElement1.getModelElementType() + ":" + modelElement1.getModelElementId())
-                            .collect(Collectors.toList());
+                    List<String> similarReferences = similarElements.stream().map(element -> element.getModelElementType() + ":" + element.getModelElementId()).toList();
                     List<Feedback> similarFeedbacks = feedbacks.stream().filter(feedback -> similarReferences.contains(feedback.getReference())).collect(Collectors.toList());
                     Feedback suggestedFeedback = FeedbackSelector.selectFeedback(modelElement, similarFeedbacks, result);
                     if (suggestedFeedback != null) {
@@ -131,7 +124,7 @@ public class CompassService {
      * submission.
      *
      * @param modelingSubmission the submission for which the result should be obtained
-     * @return the result of the given submission either obtained from the submission or the semi automatic result map, or a newly created one if it does not exist already
+     * @return the result of the given submission either obtained from the submission or the semi-automatic result map, or a newly created one if it does not exist already
      */
     private Result getAutomaticResultForSubmission(ModelingSubmission modelingSubmission) {
         Result result = modelingSubmission.getLatestResult();
@@ -159,47 +152,6 @@ public class CompassService {
             return (modelingExercise.getAssessmentType() == AssessmentType.SEMI_AUTOMATIC);
         }
         // if the assessment mode is not specified (e.g. for legacy exercises), team exercises are not supported
-        if (modelingExercise.isTeamMode()) {
-            return false;
-        }
-        return true;
-    }
-
-    /**
-     * Indicates if the diagram type of the given exercise is supported by Compass. At the moment Compass only support class diagrams.
-     *
-     * @param exerciseId the id of the exercise that should be checked
-     * @return true if the diagram type of the given exercise is supported by Compass, false otherwise
-     */
-    private boolean isSupported(long exerciseId) {
-        Optional<ModelingExercise> optionalModelingExercise = modelingExerciseRepository.findById(exerciseId);
-        if (!optionalModelingExercise.isPresent()) {
-            log.error("Exercise with ID {} could not be found", exerciseId);
-            return false;
-        }
-
-        return isSupported(optionalModelingExercise.get());
-    }
-
-    /**
-     * format: uniqueElements [{id} name apollonId conflicts] numberModels numberConflicts totalConfidence totalCoverage models [{id} confidence coverage conflicts]
-     *
-     * @param exerciseId The ID of the exercise for which to collect statistics
-     * @return statistics about the UML model
-     */
-    public JsonObject getStatistics(long exerciseId) {
-        if (!isSupported(exerciseId)) {
-            return new JsonObject();
-        }
-        return new CompassStatistics().getStatistics();
-    }
-
-    /**
-     * Print statistics of the modeling exercise with the given id for internal analysis.
-     *
-     * @param exerciseId the id of the modeling exercise for which the statistic should be printed
-     */
-    public void printStatistic(Long exerciseId) {
-        new CompassStatistics().getStatistics();
+        return !modelingExercise.isTeamMode();
     }
 }
